@@ -1,4 +1,5 @@
 27.mar (ws)
+      - fix #5077: Custom key signature only works for first measure
       - fix #5081: Ctrl+drag should not deselect
       - fix #5091: Parethesized accidentals not played back
       - fix #5100: Multi-measure rest display issue for non-full-measure
